<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <!-- The title of the main page -->
    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/coachingTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="15dp" />
        
    <!-- Description -->
    <TextView
    	android:id="@+id/description"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/pageTitle"
    	android:text="@string/coachingDescription"/>
    
    <!-- Text Box -->
    <EditText
        android:id="@+id/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:padding="@dimen/form_padding"
        android:selectAllOnFocus="true"
        android:text="@string/coach_default_groupid" >
    </EditText>
        
    <!-- Play it! button -->
    <Button 
	    android:id="@+id/playButton"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/textBox"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:layout_centerHorizontal="true"
	    style="@style/AppTheme"
	    android:text="@string/playButtonText" 
	    android:onClick="sayButtonClick" />

    <!-- Back button -->
    <Button 
	    android:id="@+id/backButton"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/playButton"
	    android:layout_centerHorizontal="true"
	    style="@style/AppTheme"
	    android:text="@string/backButtonText" 
	    android:onClick="backButtonClick" />
    
</RelativeLayout>

