<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/urllink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <!-- The title of the main page -->

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/URLTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <!-- Description -->

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageTitle"
        android:gravity="center"
        android:text="@string/URLDescription" />
    
    <!-- Commented out below is UI used during an attempt to enable typing a URL into a textbox to stream it.
    	 Feel free to use it if you like.
    <!- Text Box ->
    <EditText
        android:id="@+id/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true" >
        <requestFocus />
    </EditText>
        
    <!- Play it! button ->
    <Button 
	    android:id="@+id/playButton"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/textBox"
	    android:layout_centerHorizontal="true"
	    style="@style/AppTheme"
	    android:text="@string/playButtonText" 
	    android:onClick="playButtonClick" />       
	
	<!- Demo button ->
    <Button 
	    android:id="@+id/demoButton"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/playButton"
	    android:layout_centerHorizontal="true"
	    style="@style/AppTheme"
	    android:text="@string/demoButtonText" 
	    android:onClick="demoButtonClick" />
	    
	    -->  
    
     <!-- Back button -->
    <Button 
	    android:id="@+id/backButton"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/description"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:layout_centerHorizontal="true"
	    style="@style/AppTheme"
	    android:text="@string/backButtonText" 
	    android:onClick="backButtonClick" />
    
</RelativeLayout>
